# augments-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  claude_desktop_config.json  package.json  pyproject.toml  railway.json  server.json  server.py  start.sh
.claude/: settings.local.json
.github/workflows/: release.yml
app/: layout.tsx  opengraph-image.tsx  page.tsx  sitemap.ts
frameworks/ai-ml/: anthropic-sdk.json  gradio.json  huggingface.json  langchain.json  matplotlib.json  mcp-sdk-python.json  numpy.json  opencv.json  pandas.json  pytorch.json  scikit-learn.json  seaborn.json  streamlit.json  tensorflow.json
frameworks/backend/: actix.json  axum.json  django.json  echo.json  express.json  fastapi.json  fastify.json  fiber.json  flask.json  gin.json  koa.json  laravel.json  nestjs.json  phoenix.json  pyramid.json  ruby-on-rails.json  sanic.json  spring-boot.json
frameworks/database/: mongoose.json  prisma.json  sequelize.json  sqlalchemy.json  typeorm.json
frameworks/design/: shadcn-ui.json
frameworks/devops/: ansible.json  docker.json  kubernetes.json  terraform.json
frameworks/mobile/: capacitor.json  expo.json  flutter.json  ionic.json  react-native.json  xamarin.json
frameworks/state-management/: mobx.json  recoil.json  redux.json  zustand.json
frameworks/testing/: cypress.json  jest.json  playwright.json  pytest.json  vitest.json
frameworks/tools/: eslint.json  nx.json  parcel.json  prettier.json  rollup.json  turbo.json  webpack.json
scripts/: test-v4.ts
src/: index.ts  server.ts
tests/: __init__.py
(+60 files in other folders)
